# format_cef

./: .gitignore  .travis.yml  .travis_script  LICENSE  README.md  gen_extensions.py  requirements-gen-extensions.txt  requirements-lint.in  requirements-lint.txt  requirements-test.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
format_cef/: __init__.py  cef.py
src/format_cef/: __init__.py  cef.py  legacy.py
src/format_cef/_cef/: base.py  compat.py  valid_extensions.csv
tests/: test_cef.py
