[metadata]
name = format_cef
description = A small helper for formatting ArcSight Common Event Format (CEF) compliant messages
keywords =
    cef
    logging
url = https://github.com/Osirium/format_cef
version = 0.0.3-post1
long_description = file: README.md
long_description_content_type = text/markdown
description-file = README.md

[options]
packages = find:
package_dir = =src

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
