[metadata]
name = format_cef
description = A small helper for formatting ArcSight Common Event Format (CEF) compliant messages
keywords =
    cef
    logging
url = https://github.com/Osirium/format_cef
version = 0.0.3-post1
long_description = file: README.md
long_description_content_type = text/markdown
description-file = README.md

[options]
zip_safe = True
packages = find:
package_dir = =src
install_requires =
    six~=1.12
    importlib-resources~=1.0; python_version < "3.7"

[options.packages.find]
where = src

[options.package_data]
* = *.csv

[bdist_wheel]
universal = 1
