[metadata]
name = format_cef
description = A small helper for formatting ArcSight Common Event Format (CEF) compliant messages
keywords =
    cef
    logging
url = https://github.com/Osirium/format_cef
version = 0.0.4
long_description = file: README.md
long_description_content_type = text/markdown
description-file = README.md

[options]
zip_safe = True
packages = find:
package_dir = =src
install_requires =
    six~=1.12
    importlib-resources~=1.0; python_version < "3.7"

[options.packages.find]
where = src

[options.package_data]
* = *.csv

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
disable-noqa = True
extend-ignore =
   E203  # whitespace before : is not PEP8 compliant (& conflicts with black)

[tool:multilint]
paths = src
        tests
        setup.py
        gen_extensions.py
